fix position mobile

--- a/styles/Aside.module.scss
+++ b/styles/Aside.module.scss
@@ -9,19 +9,6 @@
     
     background-color: transparent;
     flex-direction: column;
-
-    // @media (min-width:393px) {
-        
-    //     left: -16px;
-    // }    
-    // @media (min-width:415px) {
-        
-    //     left: 0px;
-    //     padding: 0 35px;
-    // }    
-    // @media (min-width:450px) {
-    //     left: auto;
-    // }    
     @media (min-width:1025px) {
         width: auto;
         position: sticky;
@@ -229,17 +216,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 99;
+    z-index: 9;
     justify-content: flex-start;
     align-items: flex-start;
-    // @media (min-width:415px) {
-    //     padding: 0 35px 0 0;
-    //     width: 329px;
-    // }  
-    // @media (min-width:450px) {
-    //     padding: 0 ;
-    //     width: 428px;
-    // }  
 }
 .aside_pagination{
     height: 18px;
